Project

General

Profile

Actions

Bug #10685

closed

SMB code needs smatch fixes

Added by John Levon over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2019-04-03
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage smatch
Gerrit CR:
External Bug:

Description

Various parts of SMB code need to be smatch clean

Actions #1

Updated by John Levon over 4 years ago

  • Tags changed from needs-triage to needs-triage smatch
Actions #2

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit a8cc26d68f694b12e371adde16b203d5bad9f9a2

commit  a8cc26d68f694b12e371adde16b203d5bad9f9a2
Author: John Levon <john.levon@joyent.com>
Date:   2019-04-09T17:26:29.000Z

    10685 SMB code needs smatch fixes
    Reviewed by: Gergő Doma <domag02@gmail.com>
    Reviewed by: Gordon Ross <gwr@nexenta.com>
    Approved by: Gordon Ross <gwr@nexenta.com>

Actions

Also available in: Atom PDF