10685 SMB code needs smatch fixes Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Gordon Ross <gwr@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>